Fixed spacing for contact information

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -852,10 +852,10 @@ body.offcanvas {
       margin-bottom: 20px;
       color: rgba(0, 0, 0, 0.7);
       font-size: 14px;
-      letter-spacing: 3px;
+      letter-spacing: 2px;
       text-transform: uppercase; }
   .colorlib-feature.colorlib-feature-sm .colorlib-text {
-    margin-top: 30px; }
+    margin-top: 40px; }
   .colorlib-feature.colorlib-feature-sm .colorlib-icon i {
     color: #2c98f0;
     font-size: 40px; }
